readme atualizado, testes com nyc e index.js para rodar no node

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "^5.4.0"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
   },
   "repository": {
     "type": "git",
