--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "convert numbers to words (in portuguese)",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/mocha",
+    "lint": "./node_modules/eslint/bin/eslint.js ."
   },
   "devDependencies": {
     "chai": "^4.2.0",
